clap_derive/tests/ui/opt_opt_nonpositional.stderr
error: Option<Option<T>> type is meaningless for positional argument
  --> $DIR/opt_opt_nonpositional.rs:14:8
   |
14 |     n: Option<Option<u32>>,
   |        ^^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/opt_opt_nonpositional.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
